fix: social media button on mobile

--- a/style.css
+++ b/style.css
@@ -564,6 +564,7 @@ body {
 	transition: 0.5s;
 	border-radius: 4px;
 	cursor: pointer;
+	z-index: 1000;
 }
 
 .container .card .contentBx a {
